--- a/src/lang/translations/en.json
+++ b/src/lang/translations/en.json
@@ -24,9 +24,9 @@
   "price": "REGISTRATION - PRICE",
   "price_description": "The right price for you, whoever you are",
   "yearly": "Yearly",
-  "monthly": "Monthly",
+  "monthly": "3 MONTHS",
   "year": "year",
-  "month": "month",
+  "month": "FOR 3 NONTHS",
   "c1": {
     "id": 1,
     "content": "Explore the world's most celebrated literary works, from ancient epics to modern masterpieces"
