--- a/src/lang/translations/fr.json
+++ b/src/lang/translations/fr.json
@@ -24,9 +24,9 @@
   "price": "INSCRIPTION - PRIX",
   "price_description": "Le bon prix pour vous, qui que vous soyez",
   "yearly": "Annuel",
-  "monthly": "Mensuel",
+  "monthly": "3 MOIS",
   "year": "an",
-  "month": "mois",
+  "month": "POUR 3 MOIS",
   "c1": {
     "id": 1,
     "content": "Explorez les œuvres littéraires les plus célèbres du monde, des épopées antiques aux chefs-d'œuvre modernes."
